@@ -1,3 +1,9 @@
+2009-01-31  Johannes Schmid  <jschmid@openismus.com>
+
+	* glom/application.cc (on_document_load()):
+	Reinit cancelled state and some more cleanups.
+	Fixes #569721 – Glom behaves strange when you cancel the new dialog
+
 2009-01-30  Murray Cumming  <murrayc@murrayc.com>
 
 	* glom/glom.glade: Make the labels FILL and EXPAND so they really 
